[package]
name = "rust-ant-simulator"
version = "0.1.0"
authors = ["albert-dm <inbox@albert-dm.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
glam = { version = "0.14", features = ["mint"]}
glutin = "0.26"
winit = "0.24"
image = {version = "0.23", default-features = false, features = ["gif", "png", "pnm", "tga", "tiff", "webp", "bmp", "dxt", ] }